--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
             <!--CONTEUDO LADO ESQUERDO-->
             <div class="coluna coluna-esquerda">
                 <section>
-                    <h2>Perfil Profissional</h2>
-                    <p> Sou bem comunicativo, dinamico e metodico com as tarefas do dia a dia.
-                        Estou sempre buscando aprender coisas novas, sou apaixonado pelo esporte e 
-                        Atualmente estou cursando sistemas de informação (3° periodo).
+                    <h2>Sobre</h2>
+                    <p> Sou bem comunicativo, dinâmico e metódico com as tarefas do dia a dia. Estou sempre buscando aprender coisas novas, sou apaixonado pelo esporte e tecnologia. Atualmente estou cursando sistemas de informação 3° período..
                     </p>
                 </section>
 
