--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <!--INFORMAÇÕES PESSOAIS-->
                 <div class="coluna coluna-direita">
     
-                    <h1>Israel Brian</h1>
-                    <p>Desenvolvedor</p>
+                    <h1>Bryan Malakian</h1>
+                    <p>Desenvolvedor web</p>
                    
                     <ul>
                      <li> <a href="mailto:israel_brian@hotmail.com"><strong>Email: </strong> israel_brian@hotmail.com</a>
