atualizei os estilos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!--INFORMAÇÕES PESSOAIS-->
                 <div class="coluna coluna-direita">
     
-                    <h1>Brian</h1>
+                    <h1>Israel Brian</h1>
                     <p>Desenvolvedor</p>
                    
                     <ul>
